Login and logout and any qr