@@ -1,15 +1,14 @@
 package it.dantar.cav.configuration;
 
-import java.util.Arrays;
 import java.util.List;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -28,26 +27,22 @@ import it.dantar.cav.security.authentication.mfa.CustomAuthenticationProvider;
 import it.dantar.cav.security.authentication.mfa.InitMfaFlowValidationProvider;
 import it.dantar.cav.security.jwt.JwtAuthenticationEntryPoint;
 import it.dantar.cav.security.jwt.JwtRequestFilter;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-	@Autowired
-	private JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+	private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+	private final UserDetailsService jwtUserDetailsService;
+	private final JwtRequestFilter jwtRequestFilter;
+	private final PasswordEncoder passwordEncoder;
 
-	@Autowired
-	private UserDetailsService jwtUserDetailsService;
-
-	@Autowired
-	private JwtRequestFilter jwtRequestFilter;
-
-	@Autowired
-	private PasswordEncoder passwordEncoder;
-
-	@Value("${deps.cors.allowedorigins}")
-	private String corsAllowedOrigins;
+	@Value("${app.url}")
+	private String appUrl;
 
 	@Bean
 	public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfiguration) throws Exception {
@@ -57,19 +52,25 @@ public class SecurityConfig {
 	@Bean
 	SecurityFilterChain filterChainControlPanel(HttpSecurity http) throws Exception {
 		http
-				.csrf(c -> c.disable())
-				.cors(c -> c.configurationSource(corsConfigurationSource()))
-				.authorizeHttpRequests(c -> c
-						.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-						.requestMatchers(HttpMethod.POST, "/authenticate").permitAll()
-						.requestMatchers(HttpMethod.POST, "/utenti/resetpassword/**").permitAll()
-						.requestMatchers(HttpMethod.GET, "/utenti/resetpassword/**").permitAll()
-						.anyRequest().authenticated())
-				.exceptionHandling(c -> c.authenticationEntryPoint(jwtAuthenticationEntryPoint))
-				.sessionManagement(c -> c.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-				.authenticationProvider(authProvider())
-				.authenticationProvider(otpValidationProvider())
-				.addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
+		    .logout(logout -> logout
+	            .logoutUrl("/logout")
+	            .deleteCookies("auth_token")
+	            .logoutSuccessHandler((request, response, authentication) -> {
+	                response.setStatus(HttpServletResponse.SC_OK);
+	            }))
+			.csrf(c -> c.disable())
+			.cors(Customizer.withDefaults())
+			.authorizeHttpRequests(c -> c
+				.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+				.requestMatchers(HttpMethod.POST, "/authenticate").permitAll()
+				.requestMatchers(HttpMethod.POST, "/utenti/resetpassword/**").permitAll()
+				.requestMatchers(HttpMethod.GET, "/utenti/resetpassword/**").permitAll()
+				.anyRequest().authenticated())
+			.exceptionHandling(c -> c.authenticationEntryPoint(jwtAuthenticationEntryPoint))
+			.sessionManagement(c -> c.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+			.authenticationProvider(authProvider())
+			.authenticationProvider(otpValidationProvider())
+			.addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
 		return http.build();
 	}
 
@@ -80,20 +81,16 @@ public class SecurityConfig {
 				"/swagger-ui.html", "/webjars/**");
 	}
 
-	private CorsConfigurationSource corsConfigurationSource() {
-		// https://stackoverflow.com/questions/53605255/spring-boot-jwt-cors-with-angular-6
-
-		List<String> allowedOrigins = Arrays.stream(corsAllowedOrigins.split(","))
-				.map(String::trim)
-				.toList();
-
-		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(allowedOrigins);
-		configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
-		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS", "PUT", "DELETE"));
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**", configuration);
-		return source;
+	@Bean
+	CorsConfigurationSource corsConfigurationSource() {
+	    CorsConfiguration config = new CorsConfiguration();
+	    config.setAllowedOrigins(List.of(appUrl));
+	    config.setAllowedMethods(List.of("*"));
+	    config.setAllowedHeaders(List.of("*"));
+	    config.setAllowCredentials(true); // this allows cookies
+	    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+	    source.registerCorsConfiguration("/**", config);
+	    return source;
 	}
 
 	private DaoAuthenticationProvider authProvider() {
